# Practice-task

Practice-Task-v1/: CMakeLists.txt  bus_logic.h  bus_test.cpp  mainwindow.cpp  mainwindow.h  res.qrc  test.txt
